# conduit-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: ci.yml  pages.yml  release.yml
context/: README.md  current.md  decisions.md
context/sessions/: 2026-05-22.md  README.md
crates/conduit-cli/: Cargo.toml
crates/conduit-cli/src/: app.rs  config.rs  db.rs  db_provider.rs  git_status.rs  lib.rs  logs.rs  logs_provider.rs  main.rs  openapi.rs  openapi_provider.rs  output.rs  plugin_bindings.rs  plugin_check.rs  plugin_host.rs  plugin_runtime.rs  secrets.rs  state.rs  stats.rs  test_log.rs  test_report.rs  test_rerun.rs  test_run.rs  worktree.rs
crates/conduit-cli/tests/: cli.rs
crates/conduit-cli/tests/fixtures/junit/: TEST-passing.xml  TEST-sample.xml
crates/conduit-cli/tests/fixtures/logs-provider/: module.wat
crates/conduit-cli/tests/fixtures/openapi-provider/: file-read-module.wat  http-module.wat  module.wat
docs/: conduit-kit-python-direction.md  db-provider-design.md  install.md  logs-provider-design.md  plugin-build-guide.md  plugin-system-direction.md  product-direction.md  test-runner-ux-design.md
packaging/homebrew/: conduit.rb.template
site/: 404.html  index.html  styles.css
skills/conduit/: SKILL.md
wit/conduit-plugin/: db-provider-v1.wit  logs-provider-v1.wit  openapi-provider-v1.wit
