[workspace]
members = ["crates/conduit-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/Riki1312/conduit-cli"
license = "MIT"
repository = "https://github.com/Riki1312/conduit-cli"
version = "0.1.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
