[package]
name = "conduit-cli"
description = "Agent-first developer operations CLI."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
openssl = "0.10.81"
postgres-openssl = "0.5.3"
roxmltree = "0.20.0"
postgres = "0.19.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "1.1.2"
ureq = { version = "2.12.1", default-features = false, features = [
    "native-certs",
    "tls",
] }
url = "2.5.7"
wasmtime = { version = "44.0.0", default-features = false, features = [
    "cache",
    "component-model",
    "cranelift",
    "runtime",
    "std",
] }

[dev-dependencies]
wat = "1.248.0"
wit-component = "0.245.1"
wit-parser = "0.245.1"
